fixed namespacing issue for multiple super tables

--- a/supertable/resources/css/SuperTableInput.css
+++ b/supertable/resources/css/SuperTableInput.css
@@ -50,3 +50,7 @@ body.ltr .structure li:first-child {
 .superTableContainer .field .linkit .linkit-type {
 	margin: 5px 0;
 }
+
+.superTableContainer .field .linkit .linkit-type-option {
+	margin-bottom: 0;
+}
